name:                external-sort
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/external-sort#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable external-sort
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , binary-conduit
                     , bytestring
                     , bytestring-lexing
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , data-dword
                     , directory
                     , exceptions
                     , mtl
                     , transformers
                     , resourcet
                     , transformers
                     , vector
                     , vector-algorithms
                     , vector-th-unbox
